2008-06-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Fix implicit directory paths
	and use of abs_top_srcdir where abs_top_builddir is
	meant, so build works outside the source directory.
	Also ensure JAVAC is unset during the OpenJDK build.
	* Makefile.in: Regenerated.
	
2008-06-08  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill CVS source reformatting.

2008-06-08  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill fixes from CVS. See CHANGES.txt.
	* overlays/openjdk/jdk/test/com/sun/media/sound: Likewise.

2008-06-08  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (ZERO_PATCHES): Add
	patches/icedtea-eclipse-hotspot-6614100-7b24.patch.
	(NON_ZERO_PATCHES): New patch list.
	(ZERO_PATCHES_COND): Use new NON_ZERO_PATCHES list when necessary.
	* Makefile.in: Regenerate.
	* patches/icedtea-eclipse-hotspot-6614100-7b24.patch: New patch.
	* patches/icedtea-eclipse-hotspot-6614100-6b06.patch: New patch.

2008-06-01  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (OPENJDK_DATE): Updated to 30_may_2008.
	(OPENJDK_MD5SUM): Updated.
	(OPENJDK_VERSION): Updated to b10.
	(OPENJDK_SRC_ZIP): Adjusted to new underscore convention between
	version and date in b10.
	(ICEDTEA_PATCHES): Removed icedtea-xinerama.patch,
	icedtea-color-profiles.patch and icedtea-hat-spl-gpl.patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Adjusted to remove sound
	references in b10.
	* patches/icedtea-gervill.patch: Adjusted to new sound service
	files in b10.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/GRAY.pf: Removed.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/LINEAR_RGB.pf: Removed.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/PYCC.pf: Removed.
	* patches/icedtea-color-profiles.patch: Removed.
	* patches/icedtea-hat-spl-gpl.patch: Removed.
	* patches/icedtea-xinerama.patch: Removed.
