@@ -1,3 +1,12 @@
+2008-06-09  Joshua Sumali  <jsumali@redhat.com>
+
+	* rt/net/sourceforge/jnlp/Parser.java: Remove comments from xml before
+	starting the application.
+	* rt/net/sourceforge/nanoxml/XMLElement.java: Be more tolerant to double
+	dashes in xml comments.
+	(sanitizeInput(InputStreamReader, PipedOutputStream)): New method.
+	(expectedInput(String, char)): New method.
+
 2008-06-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am: Fix implicit directory paths
